Revision history for FCGI-Buffer

0.05
	Fix problem were server side cached contents weren't compressed when
		loading the content from the cache

0.04	Fri May 22 12:19:38 EDT 2015
	Added t/nocache.t
	Fix t/cache.t when CHI is not installed

0.03	Sun May 17 08:43:42 EDT 2015
	Added X-Cache and X-Cache-Lookup headers
	Fixed overly agressive optimisation
	Don't use the cache if the client sends max-age=0
	Added cache_age option to init()
	Removed Test::TempDir RT102225
	Added t/cache.t
	Fix '(in cleanup) Can't call method "READ" on an undefined value'
		Perl >= 5.14.0 only
	Improved handling of Wide characters

0.02	Sat Jan 31 11:16:28 EST 2015
	Fix set_options
	Fix handling when content-type isn't set

0.01	Thu Jan 29 15:42:06 EST 2015
	First draft, clone from CGI::Buffer and object orient the code